--- a/Menu.storyboard
+++ b/Menu.storyboard
@@ -18,19 +18,19 @@
                         <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-q5-N0u">
-                                <rect key="frame" x="20" y="64" width="560" height="536"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-q5-N0u">
+                                <rect key="frame" x="20" y="0.0" width="560" height="477"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="60"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fZk-bT-aKe">
                                     <size key="itemSize" width="70" height="70"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="featureCell" id="f8V-Ae-uf1" customClass="FeatureCell">
-                                        <rect key="frame" x="20" y="0.0" width="70" height="70"/>
+                                        <rect key="frame" x="20" y="20" width="70" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
@@ -61,8 +61,28 @@
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="7w0-0O-HCD"/>
                                 </connections>
                             </collectionView>
-                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2Ae-Gi-H1N">
-                                <rect key="frame" x="0.0" y="541" width="600" height="59"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You do not have any placemarks" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSD-jg-Jo9">
+                                <rect key="frame" x="173" y="257" width="255" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-U8-BuL">
+                                <rect key="frame" x="307" y="280" width="121" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <state key="normal" title="help me make some"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="updating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJx-fz-3rH">
+                                <rect key="frame" x="269" y="316" width="63" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="guE-Ti-g2m">
+                                <rect key="frame" x="290" y="345" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ae-Gi-H1N">
+                                <rect key="frame" x="0.0" y="477" width="600" height="59"/>
                                 <subviews>
                                     <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qcs-hp-oAO">
                                         <rect key="frame" x="8" y="41" width="150" height="2"/>
@@ -74,7 +94,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0w-rj-hle">
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0w-rj-hle">
                                         <rect key="frame" x="551" y="12" width="36" height="36"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="36" id="4oT-MX-3RQ"/>
@@ -89,37 +109,18 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="7kS-Kj-zuY"/>
                                     <constraint firstAttribute="trailing" secondItem="n0w-rj-hle" secondAttribute="trailing" constant="20" id="pAf-yX-YX0"/>
                                 </constraints>
                             </view>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="You do not have any placemarks" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSD-jg-Jo9">
-                                <rect key="frame" x="173" y="257" width="255" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-U8-BuL">
-                                <rect key="frame" x="307" y="280" width="121" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <state key="normal" title="help me make some"/>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="updating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJx-fz-3rH">
-                                <rect key="frame" x="269" y="350" width="63" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="guE-Ti-g2m">
-                                <rect key="frame" x="290" y="379" width="20" height="20"/>
-                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cSD-jg-Jo9" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="4Rc-Of-W4V"/>
                             <constraint firstItem="4FP-q5-N0u" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="7n4-hD-3sf"/>
-                            <constraint firstItem="Mb1-lH-skJ" firstAttribute="top" secondItem="4FP-q5-N0u" secondAttribute="bottom" id="8Fm-RX-v20"/>
                             <constraint firstItem="4FP-q5-N0u" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Hah-BV-qt7"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2Ae-Gi-H1N" secondAttribute="trailing" constant="-20" id="O87-Pc-6rF"/>
+                            <constraint firstItem="2Ae-Gi-H1N" firstAttribute="top" secondItem="4FP-q5-N0u" secondAttribute="bottom" id="WVo-KD-jQL"/>
                             <constraint firstItem="4FP-q5-N0u" firstAttribute="top" secondItem="IJH-cR-8aB" secondAttribute="bottom" id="Zrw-eS-xee"/>
                             <constraint firstItem="aBC-U8-BuL" firstAttribute="trailing" secondItem="cSD-jg-Jo9" secondAttribute="trailing" id="cnP-iT-x8j"/>
                             <constraint firstItem="guE-Ti-g2m" firstAttribute="top" secondItem="pJx-fz-3rH" secondAttribute="bottom" constant="8" id="d9j-eh-OZc"/>
@@ -128,14 +129,14 @@
                             <constraint firstItem="2Ae-Gi-H1N" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="hgl-P3-1aF"/>
                             <constraint firstItem="pJx-fz-3rH" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="jMx-lr-FDS"/>
                             <constraint firstItem="pJx-fz-3rH" firstAttribute="top" secondItem="aBC-U8-BuL" secondAttribute="bottom" constant="8" id="pVw-a4-Dn8"/>
-                            <constraint firstItem="Mb1-lH-skJ" firstAttribute="top" secondItem="2Ae-Gi-H1N" secondAttribute="bottom" id="r61-NK-cbq"/>
                             <constraint firstItem="guE-Ti-g2m" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="wAQ-ir-DlE"/>
+                            <constraint firstItem="Mb1-lH-skJ" firstAttribute="top" secondItem="2Ae-Gi-H1N" secondAttribute="bottom" id="yUI-ee-tYV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gi2-7k-5sv">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="DTn-wf-idM">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BZF-LX-kM9">
-                                <rect key="frame" x="20" y="7" width="94" height="30"/>
+                                <rect key="frame" x="20" y="7" width="130" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Add Photo">
@@ -148,6 +149,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="bottomButton0" destination="n0w-rj-hle" id="gu1-Zp-Oes"/>
                         <outlet property="collectionView" destination="4FP-q5-N0u" id="crb-4T-mdm"/>
                         <outlet property="emptyMsgLabel" destination="cSD-jg-Jo9" id="rs7-xD-s3F"/>
                         <outlet property="emptyMsgUrl" destination="aBC-U8-BuL" id="V7F-by-XOW"/>
@@ -408,7 +410,7 @@
         <image name="xsm_edit.png" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Gvh-KZ-cwd"/>
         <segue reference="lHI-Lx-l4g"/>
-        <segue reference="ihP-QG-oPO"/>
     </inferredMetricsTieBreakers>
 </document>
