move view to storyboard

--- a/UserForm.storyboard
+++ b/UserForm.storyboard
@@ -1,7 +1,164 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Yud-dK-GwM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Feature View Controller-->
+        <scene sceneID="AGv-wu-UDU">
+            <objects>
+                <viewController id="Yud-dK-GwM" customClass="FeatureViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gPO-UF-vsj"/>
+                        <viewControllerLayoutGuide type="bottom" id="8FM-78-kS1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jGN-MW-ZDN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="eWh-0B-4GC">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="labelCell" rowHeight="35" id="E9Q-aC-Tzj">
+                                        <rect key="frame" x="0.0" y="86" width="600" height="35"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E9Q-aC-Tzj" id="y15-X1-Qqx">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="34"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="UWo_[ImAgE]_wsS_KJX_[G].png" translatesAutoresizingMaskIntoConstraints="NO" id="T0b-59-T5H">
+                                                    <rect key="frame" x="68" y="5" width="34" height="23"/>
+                                                </imageView>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Placemark Details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GE7-ht-0KV">
+                                                    <rect key="frame" x="110" y="6" width="143" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="titleCell" id="bxP-4h-QdD" customClass="GFTitleCell">
+                                        <rect key="frame" x="0.0" y="121" width="600" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bxP-4h-QdD" id="uF9-AK-ZlS">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="add a title" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vyp-j4-pRP">
+                                                    <rect key="frame" x="20" y="20" width="280" height="29"/>
+                                                    <color key="textColor" red="0.074198982979999994" green="0.23676062480000001" blue="0.41775645379999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                    <connections>
+                                                        <action selector="onEditTitle:" destination="bxP-4h-QdD" eventType="editingChanged" id="Gah-y7-oDS"/>
+                                                        <outlet property="delegate" destination="bxP-4h-QdD" id="jFn-Yb-14N"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="titleField" destination="Vyp-j4-pRP" id="vwv-bm-hHW"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordLabelCell" rowHeight="38" id="I5p-mH-zuu" customClass="GFKeywordCell">
+                                        <rect key="frame" x="0.0" y="191" width="600" height="38"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="I5p-mH-zuu" id="Yo6-VQ-Wmu">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="37"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="value" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XPD-Ip-0Dw">
+                                                    <rect key="frame" x="70" y="8" width="230" height="21"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
+                                                    <color key="textColor" red="0.1044294663" green="0.49978077170000001" blue="0.35385333749999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="keyword" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efa-0c-nw4">
+                                                    <rect key="frame" x="20" y="8" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="value" destination="XPD-Ip-0Dw" id="JNB-JK-Opl"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="keywordCell" id="wQl-C1-qjm" customClass="GFKeywordEntryCell">
+                                        <rect key="frame" x="0.0" y="229" width="600" height="70"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wQl-C1-qjm" id="jnk-Fu-17w">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="69"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="add a keyword" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-Th-0Tf">
+                                                    <rect key="frame" x="20" y="19" width="250" height="30"/>
+                                                    <color key="textColor" red="0.1044294663" green="0.49978077170000001" blue="0.35385333749999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
+                                                    <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                                    <connections>
+                                                        <action selector="onEditKeyword:" destination="wQl-C1-qjm" eventType="editingChanged" id="b4d-KZ-0rL"/>
+                                                        <outlet property="delegate" destination="wQl-C1-qjm" id="yTm-E6-ypy"/>
+                                                    </connections>
+                                                </textField>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="keywordField" destination="7AI-Th-0Tf" id="a6c-oc-cby"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="emptyCell" rowHeight="141" id="j1p-BE-Lhr">
+                                        <rect key="frame" x="0.0" y="299" width="600" height="141"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j1p-BE-Lhr" id="8lH-UZ-QOm">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="140"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <sections/>
+                                <connections>
+                                    <outlet property="dataSource" destination="Yud-dK-GwM" id="231-m8-ywH"/>
+                                    <outlet property="delegate" destination="Yud-dK-GwM" id="iqR-lM-KII"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eWh-0B-4GC" firstAttribute="top" secondItem="jGN-MW-ZDN" secondAttribute="topMargin" constant="20" id="FiX-Z2-mQr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eWh-0B-4GC" secondAttribute="trailing" constant="-20" id="K1S-bU-hPM"/>
+                            <constraint firstItem="eWh-0B-4GC" firstAttribute="leading" secondItem="jGN-MW-ZDN" secondAttribute="leadingMargin" constant="-20" id="Oh2-1t-y2w"/>
+                            <constraint firstItem="8FM-78-kS1" firstAttribute="top" secondItem="eWh-0B-4GC" secondAttribute="bottom" id="zNd-uQ-6zh"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="pre-ic-NLO">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="l84-Cp-yHe">
+                            <connections>
+                                <action selector="onCancelFormButtonTap:" destination="Yud-dK-GwM" id="eVc-zx-ISh"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="save" id="FBH-q3-Sou">
+                            <connections>
+                                <action selector="onSaveFormButtonTap:" destination="Yud-dK-GwM" id="kgi-VV-aK6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="tableView" destination="eWh-0B-4GC" id="MMb-Kh-IX5"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NlO-VG-yPu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1371" y="103"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="UWo_[ImAgE]_wsS_KJX_[G].png" width="100" height="100"/>
+    </resources>
 </document>
