--- a/UserLibrary.storyboard
+++ b/UserLibrary.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -14,32 +15,32 @@
                         <viewControllerLayoutGuide type="bottom" id="Mb1-lH-skJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-q5-N0u">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalCompressionResistancePriority="250" alwaysBounceVertical="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-q5-N0u">
                                 <rect key="frame" x="20" y="0.0" width="560" height="477"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="60"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fZk-bT-aKe">
-                                    <size key="itemSize" width="70" height="70"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="3" minimumInteritemSpacing="3" id="fZk-bT-aKe">
+                                    <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="20" minY="20" maxX="20" maxY="20"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="featureCell" id="f8V-Ae-uf1" customClass="FeatureCell">
-                                        <rect key="frame" x="20" y="20" width="70" height="70"/>
+                                        <rect key="frame" x="20" y="20" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="empty-image-100.png" translatesAutoresizingMaskIntoConstraints="NO" id="UJb-bG-zLM">
-                                                    <rect key="frame" x="8" y="8" width="54" height="54"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="empty-image-100.png" translatesAutoresizingMaskIntoConstraints="NO" id="UJb-bG-zLM">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 </imageView>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="feature-gray-40x63.png" translatesAutoresizingMaskIntoConstraints="NO" id="g0u-vn-bcA">
-                                                    <rect key="frame" x="48" y="47" width="22" height="23"/>
+                                                    <rect key="frame" x="106" y="105" width="22" height="23"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -50,23 +51,19 @@
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
-                                <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Eua-qA-O2t">
-                                    <rect key="frame" x="0.0" y="64" width="600" height="0.0"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </collectionReusableView>
                                 <connections>
                                     <outlet property="dataSource" destination="vXZ-lx-hvc" id="K0I-wm-dnF"/>
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="7w0-0O-HCD"/>
                                 </connections>
                             </collectionView>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You do not have any placemarks" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="cSD-jg-Jo9">
-                                <rect key="frame" x="53" y="289" width="497" height="21"/>
+                                <rect key="frame" x="53" y="257" width="497" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="refreshing" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pJx-fz-3rH">
-                                <rect key="frame" x="269" y="348" width="63" height="21"/>
+                                <rect key="frame" x="269" y="316" width="63" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -75,7 +72,7 @@
                                 <rect key="frame" x="290" y="345" width="20" height="20"/>
                             </activityIndicatorView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Ae-Gi-H1N">
-                                <rect key="frame" x="0.0" y="541" width="600" height="59"/>
+                                <rect key="frame" x="0.0" y="477" width="600" height="59"/>
                                 <subviews>
                                     <progressView hidden="YES" opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Qcs-hp-oAO">
                                         <rect key="frame" x="8" y="41" width="150" height="2"/>
@@ -87,27 +84,14 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n0w-rj-hle">
-                                        <rect key="frame" x="551" y="12" width="36" height="36"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="4oT-MX-3RQ"/>
-                                            <constraint firstAttribute="width" constant="36" id="dWp-q9-9zR"/>
-                                        </constraints>
-                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" image="icon-map-100.png"/>
-                                        <connections>
-                                            <action selector="onMapButtonTap:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="s4C-aj-TZN"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="59" id="7kS-Kj-zuY"/>
-                                    <constraint firstAttribute="trailing" secondItem="n0w-rj-hle" secondAttribute="trailing" constant="20" id="pAf-yX-YX0"/>
                                 </constraints>
                             </view>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aBC-U8-BuL">
-                                <rect key="frame" x="429" y="312" width="121" height="28"/>
+                                <rect key="frame" x="429" y="280" width="121" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <state key="normal" title="need help ?"/>
                                 <connections>
@@ -118,37 +102,24 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="cSD-jg-Jo9" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="4Rc-Of-W4V"/>
-                            <constraint firstItem="4FP-q5-N0u" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="7n4-hD-3sf"/>
-                            <constraint firstItem="4FP-q5-N0u" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="Hah-BV-qt7"/>
+                            <constraint firstItem="4FP-q5-N0u" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="M9y-PP-Nw5"/>
                             <constraint firstAttribute="trailingMargin" secondItem="2Ae-Gi-H1N" secondAttribute="trailing" constant="-20" id="O87-Pc-6rF"/>
                             <constraint firstAttribute="trailingMargin" secondItem="cSD-jg-Jo9" secondAttribute="trailing" constant="30" id="T6V-O9-ann"/>
-                            <constraint firstItem="2Ae-Gi-H1N" firstAttribute="top" secondItem="4FP-q5-N0u" secondAttribute="bottom" id="WVo-KD-jQL"/>
-                            <constraint firstItem="4FP-q5-N0u" firstAttribute="top" secondItem="IJH-cR-8aB" secondAttribute="bottom" id="Zrw-eS-xee"/>
                             <constraint firstItem="aBC-U8-BuL" firstAttribute="trailing" secondItem="cSD-jg-Jo9" secondAttribute="trailing" id="cnP-iT-x8j"/>
                             <constraint firstItem="guE-Ti-g2m" firstAttribute="top" secondItem="pJx-fz-3rH" secondAttribute="bottom" constant="8" id="d9j-eh-OZc"/>
                             <constraint firstItem="aBC-U8-BuL" firstAttribute="top" secondItem="cSD-jg-Jo9" secondAttribute="bottom" constant="2" id="dpY-Qv-DSq"/>
                             <constraint firstItem="2Ae-Gi-H1N" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-20" id="hgl-P3-1aF"/>
                             <constraint firstItem="pJx-fz-3rH" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="jMx-lr-FDS"/>
                             <constraint firstItem="pJx-fz-3rH" firstAttribute="top" secondItem="aBC-U8-BuL" secondAttribute="bottom" constant="8" id="pVw-a4-Dn8"/>
+                            <constraint firstItem="4FP-q5-N0u" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="rFu-St-ezx"/>
+                            <constraint firstItem="2Ae-Gi-H1N" firstAttribute="top" secondItem="4FP-q5-N0u" secondAttribute="bottom" id="tCQ-aE-upW"/>
+                            <constraint firstItem="4FP-q5-N0u" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" id="u9A-cC-A1k"/>
                             <constraint firstItem="guE-Ti-g2m" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="wAQ-ir-DlE"/>
                             <constraint firstItem="Mb1-lH-skJ" firstAttribute="top" secondItem="2Ae-Gi-H1N" secondAttribute="bottom" id="yUI-ee-tYV"/>
                             <constraint firstItem="cSD-jg-Jo9" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="33" id="za0-a6-SAf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="gi2-7k-5sv">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="DTn-wf-idM">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="BZF-LX-kM9">
-                                <rect key="frame" x="20" y="7" width="130" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Add Photo">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onPhotoClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="6lL-di-576"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="oYl-ux-dlL">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="9G2-Go-ylf">
                                 <rect key="frame" x="541" y="7" width="39" height="30"/>
@@ -157,14 +128,13 @@
                             </button>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
-                        <outlet property="bottomButton0" destination="n0w-rj-hle" id="gu1-Zp-Oes"/>
                         <outlet property="collectionView" destination="4FP-q5-N0u" id="crb-4T-mdm"/>
                         <outlet property="emptyMsgLabel" destination="cSD-jg-Jo9" id="rs7-xD-s3F"/>
                         <outlet property="emptyMsgUrl" destination="aBC-U8-BuL" id="V7F-by-XOW"/>
                         <outlet property="label" destination="DiW-ZV-O5a" id="0lB-wx-Zrh"/>
                         <outlet property="progressView" destination="Qcs-hp-oAO" id="21P-mh-au2"/>
-                        <outlet property="startNewFormButton" destination="BZF-LX-kM9" id="1Ig-hr-5Ab"/>
                         <outlet property="updatingLabel" destination="pJx-fz-3rH" id="lD0-VH-xNd"/>
                         <outlet property="updatingSpinner" destination="guE-Ti-g2m" id="hAX-b8-pxd"/>
                     </connections>
@@ -177,6 +147,5 @@
     <resources>
         <image name="empty-image-100.png" width="100" height="100"/>
         <image name="feature-gray-40x63.png" width="40" height="63"/>
-        <image name="icon-map-100.png" width="100" height="100"/>
     </resources>
 </document>
